--- a/demo.ipynb
+++ b/demo.ipynb
@@ -141,6 +141,8 @@
     "    '''\n",
     "    print('The Question asked was: ',question)\n",
     "    cudnn.benchmark = True\n",
+    "    # Load pre-trained image\n",
+    "    # Download from https://github.com/snagiri/ECE285_Jarvis_ProjectA/releases/download/v1.0/50epoch.pth\n",
     "    log = torch.load('logs/50epoch2.pth')\n",
     "    tokens = len(log['vocab']['question']) + 1\n",
     "    net = model.Net(tokens)\n",
