adding file name changes

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -143,7 +143,7 @@
     "    cudnn.benchmark = True\n",
     "    # Load pre-trained image\n",
     "    # Download from https://github.com/snagiri/ECE285_Jarvis_ProjectA/releases/download/v1.0/50epoch.pth\n",
-    "    log = torch.load('logs/50epoch2.pth')\n",
+    "    log = torch.load('50epoch.pth')\n",
     "    tokens = len(log['vocab']['question']) + 1\n",
     "    net = model.Net(tokens)\n",
     "    net.load_state_dict(log['weights'])\n",
@@ -560,7 +560,7 @@
     }
    ],
    "source": [
-    "path = 'logs/50epoch3.pth'\n",
+    "path = '50epoch.pth'\n",
     "results = torch.load(path)\n",
     "\n",
     "l =[37.16,46.96,55.07,58.12,59.76,60.65,60.94]\n",
